--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,13 @@
 {
   "name": "Mon Tajwid",
-  "short_name": "MonTajwid",
-  "description": "Apprends le Coran avec le Tajwid — Reconnaissance vocale et gamification",
-  "start_url": "/",
+  "short_name": "Tajwid",
+  "description": "Apprends le Coran avec le Tajwid",
+  "start_url": "/splash",
   "display": "standalone",
-  "background_color": "#0B1120",
-  "theme_color": "#1B7A4E",
-  "orientation": "portrait",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "icons": [
-    {
-      "src": "/icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
