--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,10 +2,10 @@
   "name": "Mon Tajwid",
   "short_name": "Tajwid",
   "description": "Apprends le Coran avec le Tajwid",
-  "start_url": "/splash",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#0f172a",
+  "background_color": "#080d1a",
+  "theme_color": "#080d1a",
   "icons": [
     { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
